nginx-service-loadbalance.yaml
apiVersion: v1
kind: Service
metadata:
  name: test-nginx-lb
spec:
    selector:
        app: nginx
    type: LoadBalancer
    ports:
    - protocol: TCP
      port: 80
      targetPort: 80
