nginx-service-nodeport.yaml
apiVersion: v1
kind: Service
metadata:
  name: test-nginx-np
spec:
    selector:
        app: nginx
    type: NodePort
    ports:
    - protocol: TCP
      port: 80
      targetPort: 80
      nodePort: 30080
